--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
-		"mysql": "^2.18.1",
+		"mysql2": "^2.3.3",
 		"validator": "^13.7.0"
 	},
 	"scripts": {
