--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,12 @@
 	"main": "index.js",
 	"license": "MIT",
 	"dependencies": {
+		"@prisma/client": "^4.1.1",
 		"bcrypt": "^5.0.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
-		"jsonwebtoken": "^8.5.1",
-		"mysql2": "^2.3.3",
-		"validator": "^13.7.0"
+		"joi": "^17.6.0",
+		"jsonwebtoken": "^8.5.1"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test speficied\" && exit 1",
@@ -17,6 +17,7 @@
 		"dev": "nodemon server.js"
 	},
 	"devDependencies": {
-		"@types/node": "^18.6.1"
+		"@types/node": "^18.6.1",
+		"prisma": "^4.1.1"
 	}
 }
