--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,19 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"cypress:open": "cypress open"
 	},
 	"eslintConfig": {
+		"env": {
+			"cypress/global": true
+		},
 		"extends": [
 			"react-app",
 			"react-app/jest"
+		],
+		"plugins": [
+			"cypress"
 		]
 	},
 	"browserslist": {
@@ -44,6 +51,8 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.8",
+		"cypress": "^10.4.0",
+		"eslint-plugin-cypress": "^2.12.1",
 		"postcss": "^8.4.14",
 		"tailwindcss": "^3.1.7"
 	}
