--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"joi": "^17.6.0",
-		"jsonwebtoken": "^8.5.1"
+		"jsonwebtoken": "^8.5.1",
+		"supertest": "^6.2.4"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test speficied\" && exit 1",
