--- a/server/package.json
+++ b/server/package.json
@@ -7,18 +7,26 @@
 		"@prisma/client": "^4.1.1",
 		"bcrypt": "^5.0.1",
 		"dotenv": "^16.0.1",
+		"dotenv-cli": "^6.0.0",
 		"express": "^4.18.1",
 		"joi": "^17.6.0",
 		"jsonwebtoken": "^8.5.1",
 		"supertest": "^6.2.4"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test speficied\" && exit 1",
-		"start": "node server.js",
-		"dev": "nodemon server.js"
+		"test": "dotenv -e .env.testing jest --coverage --verbose --detectOpenHandles",
+		"test:watch": "yarn test --watchAll",
+		"start": "NODE_ENV=production node server.js",
+		"dev": "dotenv -e .env.development nodemon server.js",
+		"lint": "npm run lint"
 	},
 	"devDependencies": {
+		"@types/jest": "^28.1.6",
 		"@types/node": "^18.6.1",
+		"jest": "^28.1.3",
 		"prisma": "^4.1.1"
+	},
+	"jest": {
+		"testEnvironment": "node"
 	}
 }
